fix spacing

--- a/front/src/components/About/styles.modules.scss
+++ b/front/src/components/About/styles.modules.scss
@@ -2,7 +2,7 @@
     display        : flex;
     justify-content: space-evenly;
     width          : 100%;
-    padding-top    : 100px;
+    padding-top    : 300px;
 }
 
 .describe {
